<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="@string/profile_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/connections"
        android:enabled="true"
        android:title="@string/connections_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/updates"
        android:enabled="true"
        android:title="@string/updates_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:title="@string/search_menu"
        android:visible="true">
    </item>
    <item
        android:id="@+id/login"
        android:enabled="true"
        android:title="@string/login_menu"
        android:visible="true">
    </item>

</menu>